--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ cryptography==2.9.2
 cvxopt==1.2.5
 cvxpy==1.1.7
 cycler==0.10.0
+dcor==0.5.3
 decorator==4.4.2
 DeepKnockoffs==0.1.0
 dill==0.3.1.1
@@ -35,6 +36,8 @@ joblib==0.16.0
 Keras @ file:///tmp/build/80754af9/keras_split_1593112142734/work
 Keras-Preprocessing==1.1.0
 kiwisolver==1.3.1
+lingam==1.5.5
+llvmlite==0.36.0
 Markdown==3.1.1
 matplotlib==3.3.0
 mkl-fft==1.1.0
@@ -43,6 +46,7 @@ mkl-service==2.3.0
 mxnet==1.6.0
 netCDF4==1.5.3
 networkx==2.4
+numba==0.53.1
 numpy==1.18.5
 oauthlib==3.1.0
 opt-einsum==3.1.0
@@ -68,7 +72,7 @@ requests @ file:///tmp/build/80754af9/requests_1592841827918/work
 requests-oauthlib==1.3.0
 rsa==4.0
 scikit-learn==0.23.2
-scipy @ file:///tmp/build/80754af9/scipy_1592930511789/work
+scipy==1.7.3
 scs==2.1.2
 seaborn==0.11.1
 six==1.15.0
